[gd_scene load_steps=28 format=3 uid="uid://upn8qwao30xy"]

[ext_resource type="Script" path="res://Scenes/Tails/Meerkat/Tower.gd" id="1_qjnvj"]
[ext_resource type="ArrayMesh" uid="uid://bgwke674kr60c" path="res://3dModels/SkillObjects/RockTower.obj" id="2_vyac0"]
[ext_resource type="Texture2D" uid="uid://brg2qx761d667" path="res://Assets/Textures/Prototype Textures/PNG/Dark/texture_07.png" id="3_m5fhp"]
[ext_resource type="Shader" path="res://Scenes/Tails/Meerkat/VisionArea.gdshader" id="3_mk6ey"]
[ext_resource type="ArrayMesh" uid="uid://cbjsqre76ik0" path="res://3dModels/SkillObjects/Stones/Stone2/stone.obj" id="4_jqimk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ad3kp"]
height = 5.1
radius = 0.65

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t3l4m"]
height = 3.28014
radius = 1.0

[sub_resource type="Skin" id="Skin_ndbap"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_12v36"]
albedo_texture = ExtResource("3_m5fhp")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7naei"]
albedo_texture = ExtResource("3_m5fhp")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dpo2n"]
albedo_texture = ExtResource("3_m5fhp")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k8yxi"]
albedo_texture = ExtResource("3_m5fhp")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i3xm2"]
albedo_texture = ExtResource("3_m5fhp")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ilxn7"]
albedo_texture = ExtResource("3_m5fhp")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="Animation" id="Animation_hrfkl"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -5.44304, 0)]
}

[sub_resource type="Animation" id="Animation_51cxw"]
resource_name = "hide"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.084, 0), Vector3(0, -5.434, 0)]
}

[sub_resource type="Animation" id="Animation_g8c0m"]
resource_name = "rise"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -5.434, 0), Vector3(0, -0.084, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0tjd"]
_data = {
"RESET": SubResource("Animation_hrfkl"),
"hide": SubResource("Animation_51cxw"),
"rise": SubResource("Animation_g8c0m")
}

[sub_resource type="Animation" id="Animation_ch62w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RockParticleSystem:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.570634, 0)]
}

[sub_resource type="Animation" id="Animation_ljbrf"]
resource_name = "hide_debris"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RockParticleSystem:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.570634, 0), Vector3(0, -0.734682, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hch5l"]
_data = {
"RESET": SubResource("Animation_ch62w"),
"hide_debris": SubResource("Animation_ljbrf")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cu4ap"]
transparency = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qjwan"]
emission_shape_offset = Vector3(0.5, 0, 0)
direction = Vector3(0, 2, 0)
spread = 180.0
initial_velocity_min = 2.0
initial_velocity_max = 4.0
linear_accel_min = 1.0
linear_accel_max = 2.0
attractor_interaction_enabled = false
scale_min = 0.1
scale_max = 0.4
collision_mode = 1
collision_friction = 0.2
collision_bounce = 0.1
collision_use_scale = true

[sub_resource type="SphereMesh" id="SphereMesh_lkfly"]
radius = 20.0
height = 40.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yykl8"]
render_priority = 0
shader = ExtResource("3_mk6ey")
shader_parameter/albedo = Color(0.717196, 0.72948, 0.405179, 1)
shader_parameter/emission_color = Color(0.662166, 0.672336, 0.86846, 1)
shader_parameter/emission_amount = 7.898
shader_parameter/rim_steepness = 4.008
shader_parameter/uv_scale = null
shader_parameter/uv_offset = null

[sub_resource type="SphereShape3D" id="SphereShape3D_c0m12"]
radius = 20.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_0lf18"]
properties/0/path = NodePath(".:transform")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Tower" type="Node3D"]
top_level = true
script = ExtResource("1_qjnvj")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.44304, 0)
top_level = true
collision_layer = 31
collision_mask = 31

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.758, 0)
shape = SubResource("CylinderShape3D_ad3kp")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81947, 0)
shape = SubResource("CylinderShape3D_t3l4m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = ExtResource("2_vyac0")
skin = SubResource("Skin_ndbap")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_12v36")
surface_material_override/1 = SubResource("StandardMaterial3D_7naei")
surface_material_override/2 = SubResource("StandardMaterial3D_dpo2n")
surface_material_override/3 = SubResource("StandardMaterial3D_k8yxi")
surface_material_override/4 = SubResource("StandardMaterial3D_i3xm2")
surface_material_override/5 = SubResource("StandardMaterial3D_ilxn7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y0tjd")
}

[node name="AnimationPlayerDebris" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hch5l")
}

[node name="RockParticleSystem" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.570634, 0)
material_override = SubResource("StandardMaterial3D_cu4ap")
emitting = false
amount = 250
lifetime = 7.5
explosiveness = 0.19
fixed_fps = 60
fract_delta = false
collision_base_size = 0.2
visibility_aabb = AABB(-39.4942, -515.329, -42.736, 88.1445, 516.478, 83.5471)
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_qjwan")
draw_pass_1 = ExtResource("4_jqimk")

[node name="VisionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="VisionArea"]
mesh = SubResource("SphereMesh_lkfly")
surface_material_override/0 = SubResource("ShaderMaterial_yykl8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
shape = SubResource("SphereShape3D_c0m12")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_0lf18")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
